rozbudowana klasa Pong(zamiast .fxml)

--- a/src/main/resources/sample.fxml
+++ b/src/main/resources/sample.fxml
@@ -2,11 +2,18 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Label?>
-<GridPane fx:controller="Pong.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10" stylesheets="main.css">
-    <Canvas fx:id="canvas" GridPane.columnIndex="0" GridPane.rowSpan="6" width="900" height="600"
-            onMouseDragged="#mouseMoves" onMousePressed="#mousePressed" onMouseReleased="#mouseReleased"/>
-    <Button GridPane.columnIndex="1" GridPane.rowIndex="0" text="Zagraj" onAction="#draw" minWidth="100"/>
+<GridPane fx:controller="pong.Controller"
+          xmlns:fx="http://javafx.com/fxml" alignment="center"
+          hgap="10" vgap="10" stylesheets="main.css">
+
+    <Canvas fx:id="canvas" GridPane.columnIndex="0"
+            GridPane.rowSpan="6" width="900" height="600"
+            onMouseDragged="#mouseMoves"
+            onMousePressed="#mousePressed"
+            onMouseReleased="#mouseReleased"/>
+
+    <Button GridPane.columnIndex="1" GridPane.rowIndex="0" text="Zagraj"
+            onAction="#draw" minWidth="100"/>
     <Button GridPane.columnIndex="1" GridPane.rowIndex="1" text="Zakończ" onAction="#clearGame" minWidth="100"/>
     <Button GridPane.columnIndex="1" GridPane.rowIndex="2" text="L" onAction="#clikL" minWidth="45"/>
     <Button GridPane.columnIndex="2" GridPane.rowIndex="2" text="P" onAction="#clikP" minWidth="45"/>
